@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
+ *   Copyright (C) 2006-2007 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -16,8 +16,6 @@
 
 #include "core/Base/Enumeration.h"
 #include "core/Exceptions.h"
-
-PHPAPI zend_class_entry *onphp_ce_Enumeration;
 
 ONPHP_METHOD(Enumeration, __construct)
 {
