@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
+ *   Copyright (C) 2006-2007 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -15,19 +15,6 @@
 
 #include "core/Exceptions.h"
 
-PHPAPI zend_class_entry *onphp_ce_BaseException;
-PHPAPI zend_class_entry *onphp_ce_BusinessLogicException;
-PHPAPI zend_class_entry *onphp_ce_DatabaseException;
-PHPAPI zend_class_entry *onphp_ce_DuplicateObjectException;
-PHPAPI zend_class_entry *onphp_ce_MissingElementException;
-PHPAPI zend_class_entry *onphp_ce_NetworkException;
-PHPAPI zend_class_entry *onphp_ce_ObjectNotFoundException;
-PHPAPI zend_class_entry *onphp_ce_TooManyRowsException;
-PHPAPI zend_class_entry *onphp_ce_UnimplementedFeatureException;
-PHPAPI zend_class_entry *onphp_ce_UnsupportedMethodException;
-PHPAPI zend_class_entry *onphp_ce_WrongArgumentException;
-PHPAPI zend_class_entry *onphp_ce_WrongStateException;
-
 #if (PHP_MAJOR_VERSION == 5) && (PHP_MINOR_VERSION < 2)
 #define onphp_ce_Exception zend_exception_get_default()
 #else
@@ -40,6 +27,7 @@ PHP_MINIT_FUNCTION(Exceptions)
 	REGISTER_ONPHP_CUSTOM_SUB_CLASS_EX(UnimplementedFeatureException,	Exception,			NULL, NULL);
 	REGISTER_ONPHP_CUSTOM_SUB_CLASS_EX(BaseException,					Exception,			NULL, NULL);
 
+	REGISTER_ONPHP_CUSTOM_SUB_CLASS_EX(ClassNotFoundException,			BaseException,		NULL, NULL);
 	REGISTER_ONPHP_CUSTOM_SUB_CLASS_EX(MissingElementException,			BaseException,		NULL, NULL);
 	REGISTER_ONPHP_CUSTOM_SUB_CLASS_EX(NetworkException,				BaseException,		NULL, NULL);
 	REGISTER_ONPHP_CUSTOM_SUB_CLASS_EX(UnsupportedMethodException,		BaseException,		NULL, NULL);
